add show one product api and edit show many products api
